♻️ Restructured project for Railway deployment with Docker